# TheConstitution

./: .gitmodules  CMakeLists.txt  README.md
benchmarks/: EigenPerformanceTests.cpp  dummybench.cpp  dummybench2.cpp  helpers.h  minifem.h
cmake/: tests.cmake
src/: anisotropicLinear.h  definitions.h  isotropicLinear.h  materialBase.h  materialPoint.h  neoHookean.h  plasticKinHard.h  utils.h
src/unused/: strain.h
tests/: test_linear_materials.cpp  test_plastic_kinematic.cpp  testdummy.cpp  testotherdummy.cpp
tests/subdummy/: testsubdummy.cpp
